# mcp-kit

./: AGENTS.md  Cargo.toml  Makefile  README.md  plan.md
.github/workflows/: ci.yml  publish.yml
client/: Cargo.toml  README.md
client/examples/: client_demo.rs
client/src/: client.rs  error.rs  lib.rs
client/src/transport/: mod.rs  sse.rs  stdio.rs  websocket.rs
deploy/cloudflare/: Cargo.toml
deploy/cloudflare/src/: lib.rs
deploy/native/: README.md
deploy/native/src/: config.rs  main.rs
examples/: completion.rs  macros_demo.rs  notifications.rs  showcase.rs  websocket.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs
src/plugin/: wasm.rs
src/server/: builder.rs  cancellation.rs  core.rs  handler.rs  mod.rs  progress.rs  roots.rs  router.rs  sampling.rs  session.rs  subscription.rs
src/transport/: auth_layer.rs  mod.rs  websocket.rs
src/types/: messages.rs  sampling.rs
