[package]
name        = "mcp-kit-macros"
version     = "0.1.1"
edition     = "2021"
authors     = ["Ton That Vu"]
license     = "MIT"
repository  = "https://github.com/KSD-CO/rust-mcp"
homepage    = "https://github.com/KSD-CO/rust-mcp"
rust-version = "1.80"
description  = "Proc-macro attributes (#[tool], #[resource], #[prompt]) for the mcp-kit crate"
keywords     = ["mcp", "protocol", "macros", "derive", "ai"]
categories   = ["development-tools"]
readme       = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
