[package]
name = "mcp-kit-cloudflare"
version = "0.1.0"
edition = "2021"

# WASM target required for Cloudflare Workers
[lib]
crate-type = ["cdylib"]

[dependencies]
# MCP core types only — no tokio, no axum (WASM-incompatible)
mcp_kit = { path = "../..", default-features = false, package = "mcp-kit" }

# Cloudflare Workers SDK
worker = "0.3"

# Serialization
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities (no_std-compatible subset)
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"   # optimize for binary size (important for WASM)
lto       = true
